# mqtt

./: CMakeLists.txt  README.md
cmd/: main.c  trans.c
include/: mqtt.h  trans.h
scripts/: test-subpub.sh  test_basic_pubsub.sh  test_progressive_sizes.sh
src/: mqtt.c  mqtt_helper.c  mqtt_intl.h  mqtt_packet.c
test/: test_comprehensive.c  test_debug.c  test_final.c  test_mqtt.c  test_simple.c  test_thread_safety.c
